MyDev/src/objects/JobPostingCite__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Site_Name__c</fullName>
        <label>Job Site Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>JobPostingCite</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOBSITE-{0000}</displayFormat>
        <label>JobPostingSite Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JobPostingCites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>